--- a/docs/hints/h5.md
+++ b/docs/hints/h5.md
@@ -1,3 +1,3 @@
-# Sparkle Redberry - "Xmas Cheer"
+# Sparkle Redberry - "Xmas Cheer Laser"
 <img class="elf_avatar" src="../../img/hints/h5/sparkle_redberry.png"/>
 Provides a hint for [Network Log Analysis - Determine Compromised System](../../challenges/c5/).
