Enabled attr_list extension

--- a/docs/hints/h3.md
+++ b/docs/hints/h3.md
@@ -1,6 +1,6 @@
 # Bushy Evergreen - "Escape Ed"
-<img class="elf_avatar" src="../../img/hints/h3/bushy_evergreen.png"/>
-Provides a hint for [Windows Log Analysis - Evaluate Attack Outcome](../../challenges/c3/).
+![Busy Evergreen](../img/hints/h3/bushy_evergreen.png){: .elf_avatar}
+Provides a hint for [Windows Log Analysis - Evaluate Attack Outcome](../challenges/c3.md).
 
 ## Request
 > Hi, I'm Bushy Evergreen. Welcome to Elf U!  
