--- a/docs/hints/h6.md
+++ b/docs/hints/h6.md
@@ -1,3 +1,3 @@
 # Tangle Coalbox - "Frosty Keypad"
-<img class="elf_avatar" src="../../img/hints/h6/tangle_coalbox.png"/>
+![Tangle Coalbox](../img/hints/h6/tangle_coalbox.png){: .elf_avatar}
 Provides a hint for [Splunk](../../challenges/c6/).
