--- a/docs/hints/h9.md
+++ b/docs/hints/h9.md
@@ -1,3 +1,3 @@
 # Pepper Minstix - "Graylog"
-<img class="elf_avatar" src="../../img/hints/h9/pepper_minstix.png"/>
+![Pepper Minstix](../img/hints/h9/pepper_minstix.png){: .elf_avatar}
 Provides a hint for [Retrieve the Scraps of Paper from Server](../../challenges/c9/).
