--- a/docs/hints/h10.md
+++ b/docs/hints/h10.md
@@ -1,3 +1,3 @@
 # Holly Evergreen - "Mongo Pilfer"
-<img class="elf_avatar" src="../../img/hints/h10/holly_evergreen.png"/>
+![Holly Evergreen](../img/hints/h10/holly_evergreen.png){: .elf_avatar}
 Provides a hint for [Recover Cleartext Document](../../challenges/c10/).
