--- a/docs/hints/h11.md
+++ b/docs/hints/h11.md
@@ -1,3 +1,3 @@
 # Kent Tinseltooth - "Smart Braces"
-<img class="elf_avatar" src="../../img/hints/h11/kent_tinseltooth.png"/>
+![Kent Tinseltooth](../img/hints/h11/kent_tinseltooth.png){: .elf_avatar}
 Provides a hint for [Open the Sleigh Shop Door](../../challenges/c11/).
