--- a/docs/hints/h12.md
+++ b/docs/hints/h12.md
@@ -1,3 +1,3 @@
 # Wunorse Openslae - "Zeek JSON Analysis"
-<img class="elf_avatar" src="../../img/hints/h12/wunorse_openslae.png"/>
+![Wunorse Openslae](../img/hints/h12/wunorse_openslae.png){: .elf_avatar}
 Provides a hint for [Filter Out Poisoned Sources of Weather Data](../../challenges/c12/).
