--- a/docs/hints/h4.md
+++ b/docs/hints/h4.md
@@ -1,3 +1,3 @@
 # SugarPlum Mary - "Linux Path"
-<img class="elf_avatar" src="../../img/hints/h4/sugarplum_mary.png"/>
+![SugarPlum Mary](../img/hints/h4/sugarplum_mary.png){: .elf_avatar}
 Provides a hint for [Windows Log Analysis - Determine Attacker Technique](../../challenges/c4/).
