--- a/docs/hints/h5.md
+++ b/docs/hints/h5.md
@@ -1,3 +1,3 @@
 # Sparkle Redberry - "Xmas Cheer Laser"
-<img class="elf_avatar" src="../../img/hints/h5/sparkle_redberry.png"/>
+![Sparkle Redberry](../img/hints/h5/sparkle_redberry.png){: .elf_avatar}
 Provides a hint for [Network Log Analysis - Determine Compromised System](../../challenges/c5/).
