--- a/docs/hints/h7.md
+++ b/docs/hints/h7.md
@@ -1,3 +1,3 @@
 # Minty Candycane - "Holiday Hack Trail"
-<img class="elf_avatar" src="../../img/hints/h7/minty_candycane.png"/>
+![Minty Candycane](../img/hints/h7/minty_candycane.png){: .elf_avatar}
 Provides a hint for [Get Access to the Steam Tunnels](../../challenges/c7/).
