--- a/docs/hints/h8.md
+++ b/docs/hints/h8.md
@@ -1,3 +1,3 @@
 # Alabaster Snowball - "Nyanshell"
-<img class="elf_avatar" src="../../img/hints/h8/alabaster_snowball.png"/>
+![Alabaster Snowball](../img/hints/h8/alabaster_snowball.png){: .elf_avatar}
 Provides a hint for [Bypassing the Frido Sleigh CAPTEHA](../../challenges/c8/).
