Cleanup and extensions

--- a/docs/hints/h3.md
+++ b/docs/hints/h3.md
@@ -1,5 +1,5 @@
 # Bushy Evergreen - "Escape Ed"
-![Busy Evergreen](../img/hints/h3/bushy_evergreen.png){: .elf_avatar}
+![Bushy Evergreen](../img/hints/h3/bushy_evergreen.png){: .elf_avatar}
 Provides a hint for [Windows Log Analysis - Evaluate Attack Outcome](../challenges/c3.md).
 
 ## Request
