--- a/docs/hints/h5.md
+++ b/docs/hints/h5.md
@@ -20,7 +20,7 @@ Before we go over the solution I'd like to direct everyone's attention to the wa
 
 ![Snowman experiment](../img/hints/h5/snowman_experiment_no.png)
 
-Anyway, the idea of the challenge is to use a series of PowerShell commands to find the correct angle, temperature, refraction, and gas mixture parameters to correctly configure the Xmas Cheer Laser so it reaches 5 Mega-Jollies per liter of laser output. Prepare for a scavenger hunt because this challenge will take a while to get through. Let's start by reading the 'callingcard.txt' file.
+Anyway, the idea of the challenge is to use a series of PowerShell commands to find the right angle, temperature, refraction, and gas mixture parameters to correctly configure the Xmas Cheer Laser so it reaches 5 Mega-Jollies per liter of laser output. Prepare for a scavenger hunt because this challenge will take a while to get through. Let's start by reading the 'callingcard.txt' file.
 
 ```powershell
 Get-Content /home/callingcard.txt
