--- a/docs/hints/h5.md
+++ b/docs/hints/h5.md
@@ -16,7 +16,7 @@ Provides a hint for [Network Log Analysis - Determine Compromised System](../../
 
 ## Solution
 
-Before we go over the solution I'd like to direct everyone's attention to the way Sparkle's running this whole laser experiment. Is there really no other option than pointing insanely intense laser beams at snowmen? I mean, what if [Jack Frost](../../#kringlecon-3-jack-frost) gets wind of this?
+Before we go over the solution I'd like to direct everyone's attention to the way Sparkle's running this whole laser experiment. Is there really no other option than pointing insanely intense laser beams at a snowman? I mean, what if [Jack Frost](../../#kringlecon-3-jack-frost) gets wind of this?
 
 ![Snowman experiment](../img/hints/h5/snowman_experiment_no.png)
 
@@ -145,7 +145,7 @@ $correct_gases_postbody = @{O=6;H=7;He=3;N=4;Ne=22;Ar=11;Xe=10;F=20;Kr=8;Rn=9}
 
 ![Terminal 13](../img/hints/h5/h5_terminal13.png)
 
-Woaa, a whoppin' 6.07 Mega-Jollies! Time to spread some Xmas cheer! But seriously, think of the snowmen.
+Woaa, a whoppin' 6.07 Mega-Jollies! Time to spread some Xmas cheer! But seriously, think of the snowman.
 
 
 ## Answer
