--- a/docs/hints/h7.md
+++ b/docs/hints/h7.md
@@ -2,3 +2,55 @@
 ![Minty Candycane](../img/hints/h7/minty_candycane.png){: .elf_avatar}
 
 Provides a hint for [Get Access to the Steam Tunnels](../../challenges/c7/).
+
+## Request
+> Hi! I'm Minty Candycane!  
+> I just LOVE this old game!  
+> I found it on a 5 1/4" floppy in the attic.  
+> You should give it a go!  
+> If you get stuck at all, check out this year's talks.  
+> One is about web application penetration testing.  
+> Good luck, and don't get dysentery!  
+
+## Resources
+- [Chris Elgee, Web Apps: A Trailhead](https://youtu.be/0T6-DQtzCgM) 
+
+## Solution
+
+Start by looking at the HTML source code for some hints about each difficulty level.
+
+![Valid Code](../img/hints/h7/h7_terminal1.png)
+
+### Easy
+
+![Valid Code](../img/hints/h7/h7_terminal2.png)
+
+To solve the challenge on 'easy' start the game, click on `easy`, then click on `buy` (no need to make any changes to your inventory), change the `distance` parameter in the URL to something over 8000 and press the arrow button to the right. 
+
+![Valid Code](../img/hints/h7/h7_terminal3.png)
+
+On the next screen the `distance` value should have decreased. Press `Go`.
+
+![Valid Code](../img/hints/h7/h7_terminal4.png)
+
+Tadaaaa! *"Your party has succeeded!"*
+
+### Medium
+
+![Valid Code](../img/hints/h7/h7_terminal5.png)
+
+Solving this on 'medium' difficulty really isn't all that different. The `distance` parameter is just stored and transmitted in a different way than before. Instead of manipulating the URL (GET request) we now change the values in the HTML body (POST request). Click on `medium`,  then click on `buy` (again, no need to make any changes to your inventory), open up your browser's developer tools, edit the value of the input tag named `distance`, and press `Go`.
+
+![Valid Code](../img/hints/h7/h7_terminal6.png)
+
+And once again, *"Your party has succeeded!"*
+
+## Answer
+- Easy: change the `distance` GET parameter in the URL.
+- Medium: change the `distance` POST parameter in the HTML body.
+
+## Hint
+> You made it - congrats!  
+> Have you played with the key grinder in my room? Check it out!  
+> It turns out: if you have a good [image of a key](https://github.com/deviantollam/decoding), you can [physically copy it](https://youtu.be/KU6FJnbkeLA).  
+> Maybe you'll see someone hopping around with a key here on campus.  
