--- a/docs/hints/h6.md
+++ b/docs/hints/h6.md
@@ -2,3 +2,71 @@
 ![Tangle Coalbox](../img/hints/h6/tangle_coalbox.png){: .elf_avatar}
 
 Provides a hint for [Splunk](../../challenges/c6/).
+
+## Request
+> Hey kid, it's me, Tangle Coalbox.  
+> I'm sleuthing again, and I could use your help.  
+> Ya see, this here number lock's been popped by someone.  
+> I think I know who, but it'd sure be great if you could open this up for me.  
+> I've got a few clues for you. 
+>  
+> 1\. One digit is repeated once.  
+> 2\. The code is a prime number.  
+> 3\. You can probably tell by looking at the keypad which buttons are used.  
+
+## Resources
+- *"One digit is repeated once, it's prime, and you can see which keys were used"*
+
+## Solution
+![Keypad](../img/hints/h6/h6_terminal1_yeeaaah.png)
+
+Based on the hints and the keypad image we see that 1, 3, 7, and 'enter' are the keys that are used most frequently. Since one of the 3 digits is also repeated once the total code has a length of 4. This limits the options to [permutations](https://en.wikipedia.org/wiki/Permutation) of the following 3 number sets: [1, 1, 3, 7], [1, 3, 3, 7], and [1, 3, 7, 7]. Finally our 4-digit number needs to be prime. To help solve this we can use the following `find-code.py` Python script.
+
+```python
+#!/usr/bin/env python3
+"""Tangle Coalbox Frosty Keypad challenge."""
+import itertools
+
+
+def is_prime(number):
+    """Verify if a number is a prime."""
+    return 2 in [number, 2**number % number]
+
+
+digit_sets = [
+    ['1', '1', '3', '7'],
+    ['1', '3', '3', '7'],
+    ['1', '3', '7', '7']
+]
+
+primes = []
+
+for digits in digit_sets:
+    for subset in itertools.permutations(digits):
+        val = int(''.join(subset))
+        if is_prime(val) and val not in primes:
+            primes.append(val)
+            print(f'{val} is a prime number')
+```
+
+The script generates a manageable list of 5 numbers.
+
+```
+1373 is a prime number
+1733 is a prime number
+3137 is a prime number
+3371 is a prime number
+7331 is a prime number
+```
+
+![Valid Code](../img/hints/h6/h6_terminal2.png)
+
+Still requires 5 attempts to get to the correct code, but [we're finally in](https://www.youtube.com/watch?v=7uW47jWLMiY)!
+
+## Answer
+Code: `7331`.
+
+## Hint
+> Yep, that's it. Thanks for the assist, gumshoe.  
+> Hey, if you think you can help with another problem, [Prof. Banas](../../challenges/c6/) could use a hand too.  
+> Head west to the other side of the quad into Hermey Hall and find him in the Laboratory.  
