--- a/docs/hints/h6.md
+++ b/docs/hints/h6.md
@@ -49,9 +49,9 @@ for digits in digit_sets:
             print(f'{val} is a prime number')
 ```
 
-The script generates a manageable list of 5 numbers.
+The script generates a manageable list of 5 possible candidates.
 
-```
+```text
 1373 is a prime number
 1733 is a prime number
 3137 is a prime number
@@ -61,7 +61,7 @@ The script generates a manageable list of 5 numbers.
 
 ![Valid Code](../img/hints/h6/h6_terminal2.png)
 
-Still requires 5 attempts to get to the correct code, but [we're finally in](https://www.youtube.com/watch?v=7uW47jWLMiY)!
+Looks like `7331` is the [correct code](https://www.youtube.com/watch?v=7uW47jWLMiY)!
 
 ## Answer
 Code: `7331`.
