--- a/docs/hints/h7.md
+++ b/docs/hints/h7.md
@@ -23,13 +23,15 @@ Start by looking at the HTML source code for some hints about each difficulty le
 
 ### Easy
 
+To solve the challenge on 'easy' start the game, click on `easy`, then click on `buy` (no need to make any changes to your inventory), change the `distance` parameter in the URL to whatever value covers the remaining distance, and press `<enter>`.
+
 ![Valid Code](../img/hints/h7/h7_terminal2.png)
 
-To solve the challenge on 'easy' start the game, click on `easy`, then click on `buy` (no need to make any changes to your inventory), change the `distance` parameter in the URL to something over 8000 and press the arrow button to the right. 
+On the next screen the `distance` value should have decreased.
 
 ![Valid Code](../img/hints/h7/h7_terminal3.png)
 
-On the next screen the `distance` value should have decreased. Press `Go`.
+Now press the `Go` button.
 
 ![Valid Code](../img/hints/h7/h7_terminal4.png)
 
@@ -37,17 +39,19 @@ Tadaaaa! *"Your party has succeeded!"*
 
 ### Medium
 
+Solving the challenge on 'medium' really isn't all that different. Instead of manipulating the `distance` in the URL we now change the `distance` value in the HTML body. Click on `medium`, then click the `buy` button, open up your browser's developer tools, and edit the value of the input tag named `distance`.
+
 ![Valid Code](../img/hints/h7/h7_terminal5.png)
 
-Solving this on 'medium' difficulty really isn't all that different. The `distance` parameter is just stored and transmitted in a different way than before. Instead of manipulating the URL (GET request) we now change the values in the HTML body (POST request). Click on `medium`,  then click on `buy` (again, no need to make any changes to your inventory), open up your browser's developer tools, edit the value of the input tag named `distance`, and press `Go`.
+Press the `Go` button.
 
 ![Valid Code](../img/hints/h7/h7_terminal6.png)
 
 And once again, *"Your party has succeeded!"*
 
 ## Answer
-- Easy: change the `distance` GET parameter in the URL.
-- Medium: change the `distance` POST parameter in the HTML body.
+- Easy: change the `distance` parameter in the URL.
+- Medium: change the `distance` value in the HTML body.
 
 ## Hint
 > You made it - congrats!  
