--- a/docs/hints/h7.md
+++ b/docs/hints/h7.md
@@ -19,21 +19,21 @@ Provides a hint for [Get Access to the Steam Tunnels](../../challenges/c7/).
 
 Start by looking at the HTML source code for some hints about each difficulty level.
 
-![Valid Code](../img/hints/h7/h7_terminal1.png)
+![HTML Source](../img/hints/h7/h7_terminal1.png)
 
 ### Easy
 
 To solve the challenge on 'easy' start the game, click on `easy`, then click on `buy` (no need to make any changes to your inventory), change the `distance` parameter in the URL to whatever value covers the remaining distance, and press `<enter>`.
 
-![Valid Code](../img/hints/h7/h7_terminal2.png)
+![Edit URL](../img/hints/h7/h7_terminal2.png)
 
 On the next screen the `distance` value should have decreased.
 
-![Valid Code](../img/hints/h7/h7_terminal3.png)
+![Distance Remaining](../img/hints/h7/h7_terminal3.png)
 
 Now press the `Go` button.
 
-![Valid Code](../img/hints/h7/h7_terminal4.png)
+![We Won](../img/hints/h7/h7_terminal4.png)
 
 Tadaaaa! *"Your party has succeeded!"*
 
@@ -41,11 +41,11 @@ Tadaaaa! *"Your party has succeeded!"*
 
 Solving the challenge on 'medium' really isn't all that different. Instead of manipulating the `distance` in the URL we now change the `distance` value in the HTML body. Click on `medium`, then click the `buy` button, open up your browser's developer tools, and edit the value of the input tag named `distance`.
 
-![Valid Code](../img/hints/h7/h7_terminal5.png)
+![Edit HTML](../img/hints/h7/h7_terminal5.png)
 
 Press the `Go` button.
 
-![Valid Code](../img/hints/h7/h7_terminal6.png)
+![We Won](../img/hints/h7/h7_terminal6.png)
 
 And once again, *"Your party has succeeded!"*
 
