Updated image descriptions

--- a/docs/hints/h10.md
+++ b/docs/hints/h10.md
@@ -22,15 +22,15 @@ First determine the port that MongoDB is listening on by executing `ps ax`.
 
 Next, connect to MongoDB using `mongo 127.0.0.1:12121 --quiet` and list all databases with `show databases`.
 
-![Processes](../img/hints/h10/h10_terminal2.png)
+![Show Databases](../img/hints/h10/h10_terminal2.png)
 
 Open the 'elfu' database with `use elfu` and show the available collections by issuing the command `show collections`. The 'solution' collection seems a likely candidate to contain quiz answers so use `db.solution.find()` to list its documents.
 
-![Processes](../img/hints/h10/h10_terminal3.png)
+![Show Collections](../img/hints/h10/h10_terminal3.png)
 
 Run `db.loadServerScripts();displaySolution();` as instructed.
 
-![Processes](../img/hints/h10/h10_terminal4.png)
+![Run Command](../img/hints/h10/h10_terminal4.png)
 
 Awesome! All quizzes can now be graded! Oh, wait...
 
