Partial h10 write-up

--- a/docs/hints/h11.md
+++ b/docs/hints/h11.md
@@ -2,3 +2,57 @@
 ![Kent Tinseltooth](../img/hints/h11/kent_tinseltooth.png){: .elf_avatar}
 
 Provides a hint for [Open the Sleigh Shop Door](../../challenges/c11/).
+
+## Request
+> OK, this is starting to freak me out!  
+> Oh sorry, I'm Kent Tinseltooth. My Smart Braces are acting up.  
+> Do... Do you ever get the feeling you can hear things? Like, voices?  
+> I know, I sound crazy, but ever since I got these... Oh!  
+> Do you think you could take a look at my Smart Braces terminal?  
+> I'll bet you can keep other students out of my head, so to speak.  
+> It might just take a bit of Iptables work.
+
+## Resources
+- [How to configure iptables on CentOS](https://upcloud.com/community/tutorials/configure-iptables-centos/)
+
+## Solution
+1. Read the conversation about [Sleigh Route Finder API](https://srf.elfu.org) (screenshot1.png)
+1. `cat /home/elfuuser/IOTteethBraces.md` (screenshot2.png)
+   A proper configuration for the Smart Braces should be exactly:
+   1. Set the default policies to DROP for the INPUT, FORWARD, and OUTPUT chains.
+   2. Create a rule to ACCEPT all connections that are ESTABLISHED,RELATED on the INPUT and the OUTPUT chains.
+   3. Create a rule to ACCEPT only remote source IP address 172.19.0.225 to access the local SSH server (on port 22).
+   4. Create a rule to ACCEPT any source IP to the local TCP services on ports 21 and 80.
+   5. Create a rule to ACCEPT all OUTPUT traffic with a destination TCP port of 80.
+   6. Create a rule applied to the INPUT chain to ACCEPT all traffic from the lo interface.
+2. Create the following rules (screenshot1.png):
+
+```text
+sudo iptables -P INPUT DROP
+sudo iptables -P FORWARD DROP
+sudo iptables -P OUTPUT DROP
+sudo iptables -A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
+sudo iptables -A OUTPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
+sudo iptables -A INPUT -s 172.19.0.225 -p tcp --dport 22 -j ACCEPT
+sudo iptables -A INPUT -p tcp --dport 21 -j ACCEPT
+sudo iptables -A INPUT -p tcp --dport 80 -j ACCEPT
+sudo iptables -A OUTPUT -p tcp --dport 80 -j ACCEPT
+sudo iptables -A INPUT -i lo -j ACCEPT
+```
+
+# Answer
+See [solution](#solution)
+
+## Hint
+> Oh thank you! It's so nice to be back in my own head again. Er, alone.  
+> By the way, have you tried to get into the crate in the Student Union? It has an interesting set of locks.  
+> There are funny rhymes, references to perspective, and odd mentions of eggs!  
+> And if you think the stuff in your browser looks strange, you should see the page source...  
+> Special tools? No, I don't think you'll need any extra tooling for those locks.  
+> BUT - I'm pretty sure you'll need to use [Chrome's developer tools](https://developers.google.com/web/tools/chrome-devtools) for that one.  
+> Or sorry, you're a [Firefox fan](https://developer.mozilla.org/en-US/docs/Tools)?  
+> Yeah, [Safari's fine too](https://developer.apple.com/safari/tools/) - I just have an ineffible hunger for a physical Esc key.  
+> [Edge](https://docs.microsoft.com/en-us/microsoft-edge/devtools-guide/console)? That's cool. Hm? No no, I was thinking of an unrelated thing.  
+> [Curl fan](https://curl.haxx.se/docs/manpage.html)? Right on! Just remember: the Windows one doesn't like double quotes.  
+> Old school, huh? Oh sure - I've got what you need [right here](https://xkcd.com/325/)...  
+> And I hear the Holiday Hack Trail game will give hints on the last screen if you complete it on Hard.  
