Partial h11 and h12 write-up.

--- a/docs/hints/h11.md
+++ b/docs/hints/h11.md
@@ -16,8 +16,8 @@ Provides a hint for [Open the Sleigh Shop Door](../../challenges/c11/).
 - [How to configure iptables on CentOS](https://upcloud.com/community/tutorials/configure-iptables-centos/)
 
 ## Solution
-1. Read the conversation about [Sleigh Route Finder API](https://srf.elfu.org) (screenshot1.png)
-1. `cat /home/elfuuser/IOTteethBraces.md` (screenshot2.png)
+1. Read the conversation about [Sleigh Route Finder API](https://srf.elfu.org)
+2. `cat /home/elfuuser/IOTteethBraces.md`
    A proper configuration for the Smart Braces should be exactly:
    1. Set the default policies to DROP for the INPUT, FORWARD, and OUTPUT chains.
    2. Create a rule to ACCEPT all connections that are ESTABLISHED,RELATED on the INPUT and the OUTPUT chains.
@@ -25,7 +25,7 @@ Provides a hint for [Open the Sleigh Shop Door](../../challenges/c11/).
    4. Create a rule to ACCEPT any source IP to the local TCP services on ports 21 and 80.
    5. Create a rule to ACCEPT all OUTPUT traffic with a destination TCP port of 80.
    6. Create a rule applied to the INPUT chain to ACCEPT all traffic from the lo interface.
-2. Create the following rules (screenshot1.png):
+3. Create the following rules (screenshot1.png):
 
 ```text
 sudo iptables -P INPUT DROP
