--- a/docs/hints/h12.md
+++ b/docs/hints/h12.md
@@ -2,3 +2,35 @@
 ![Wunorse Openslae](../img/hints/h12/wunorse_openslae.png){: .elf_avatar}
 
 Provides a hint for [Filter Out Poisoned Sources of Weather Data](../../challenges/c12/).
+
+## Request
+> Wunorse Openslae here, just looking at some Zeek logs.  
+> I'm pretty sure one of these connections is a malicious C2 channel...  
+> Do you think you could take a look?  
+> I hear a lot of C2 channels have very long connection times.  
+> Please use jq to find the longest connection in this data set.  
+> We have to kick out any and all grinchy activity!
+
+## Resources
+- [Parsing Zeek JSON Logs with JQ](https://pen-testing.sans.org/blog/2019/12/03/parsing-zeek-json-logs-with-jq-2)
+
+## Solution
+1. `cat conn.log | jq -s 'sort_by(.duration) | reverse | .[0]'`
+
+## Answer
+IP address: `13.107.21.200`.
+
+## Hint
+> That's got to be the one - thanks!  
+> Hey, you know what? We've got a crisis here.  
+> You see, Santa's flight route is planned by a complex set of machine learning algorithms which use available weather data.  
+> All the weather stations are reporting severe weather to Santa's Sleigh. I think someone might be forging intentionally false weather data!  
+> I'm so flummoxed I can't even remember how to login!  
+> Hmm... Maybe the Zeek http.log could help us.  
+> I worry about [LFI](https://www.owasp.org/index.php/Testing_for_Local_File_Inclusion), [XSS](https://www.owasp.org/index.php/Cross-site_Scripting_(XSS)), and [SQLi](https://www.owasp.org/index.php/SQL_Injection) in the Zeek log - oh my!  
+> And I'd be shocked if there weren't some [shell stuff](https://en.wikipedia.org/wiki/Shellshock_(software_bug)) in there too.  
+> I'll bet if you pick through, you can find some naughty data from naughty hosts and block it in the firewall.  
+> If you find a log entry that definitely looks bad, try pivoting off other unusual attributes in that entry to find more bad IPs.  
+> The sleigh's machine learning device (SRF) needs most of the malicious IPs blocked in order to calculate a good route.  
+> Try not to block many legitimate weather station IPs as that could also cause route calculation failure.  
+> Remember, when looking at JSON data, jq is the tool for you!
