--- a/docs/hints/h6.md
+++ b/docs/hints/h6.md
@@ -24,7 +24,7 @@ Based on the hints and the keypad image we see that 1, 3, 7, and 'enter' are the
 
 ```python
 #!/usr/bin/env python3
-"""Tangle Coalbox Frosty Keypad challenge."""
+"""Tangle Coalbox - Frosty Keypad challenge."""
 import itertools
 
 
@@ -33,20 +33,26 @@ def is_prime(number):
     return 2 in [number, 2**number % number]
 
 
-digit_sets = [
-    ['1', '1', '3', '7'],
-    ['1', '3', '3', '7'],
-    ['1', '3', '7', '7']
-]
+def main():
+    """Execute."""
+    digit_sets = [
+        ['1', '1', '3', '7'],
+        ['1', '3', '3', '7'],
+        ['1', '3', '7', '7']
+    ]
 
-primes = []
+    primes = []
 
-for digits in digit_sets:
-    for subset in itertools.permutations(digits):
-        val = int(''.join(subset))
-        if is_prime(val) and val not in primes:
-            primes.append(val)
-            print(f'{val} is a prime number')
+    for digits in digit_sets:
+        for subset in itertools.permutations(digits):
+            val = int(''.join(subset))
+            if is_prime(val) and val not in primes:
+                primes.append(val)
+                print(f'{val} is a prime number')
+
+
+if __name__ == "__main__":
+    main()
 ```
 
 The script generates a manageable list of 5 possible candidates.
