--- a/docs/challenges/c1.md
+++ b/docs/challenges/c1.md
@@ -1,6 +1,7 @@
 # Talk to Santa & Find the Turtle Doves
-
 ![Santa](../img/challenges/c1/screenshot1.jpg)
+
+Hint from: no hints available.
 
 ## Request
 > This is a little embarrassing, but I need your help.  
