--- a/docs/hints/h12.md
+++ b/docs/hints/h12.md
@@ -1,7 +1,7 @@
 # Wunorse Openslae - "Zeek JSON Analysis"
 ![Wunorse Openslae](../img/hints/h12/wunorse_openslae.png){: .elf_avatar}
 
-Provides a hint for [Filter Out Poisoned Sources of Weather Data](../../challenges/c12/).
+Hint for: [Filter Out Poisoned Sources of Weather Data](../../challenges/c12/).
 
 ## Request
 > Wunorse Openslae here, just looking at some Zeek logs.  
@@ -18,7 +18,7 @@ Provides a hint for [Filter Out Poisoned Sources of Weather Data](../../challeng
 1. `cat conn.log | jq -s 'sort_by(.duration) | reverse | .[0]'`
 
 ## Answer
-IP address: `13.107.21.200`.
+IP address: `13.107.21.200`
 
 ## Hint
 > That's got to be the one - thanks!  
