--- a/docs/hints/h4.md
+++ b/docs/hints/h4.md
@@ -1,7 +1,7 @@
 # SugarPlum Mary - "Linux Path"
 ![SugarPlum Mary](../img/hints/h4/sugarplum_mary.png){: .elf_avatar}
 
-Provides a hint for [Windows Log Analysis - Determine Attacker Technique](../../challenges/c4/).
+Hint for: [Windows Log Analysis - Determine Attacker Technique](../../challenges/c4/).
 
 ## Request
 > Oh me oh my - I need some help!  
