--- a/docs/hints/h6.md
+++ b/docs/hints/h6.md
@@ -1,7 +1,7 @@
 # Tangle Coalbox - "Frosty Keypad"
 ![Tangle Coalbox](../img/hints/h6/tangle_coalbox.png){: .elf_avatar}
 
-Provides a hint for [Splunk](../../challenges/c6/).
+Hint for: [Splunk](../../challenges/c6/).
 
 ## Request
 > Hey kid, it's me, Tangle Coalbox.  
@@ -70,7 +70,7 @@ The script generates a manageable list of 5 possible candidates.
 Looks like `7331` is the [correct code](https://www.youtube.com/watch?v=7uW47jWLMiY)!
 
 ## Answer
-Code: `7331`.
+Code: `7331`
 
 ## Hint
 > Yep, that's it. Thanks for the assist, gumshoe.  
