--- a/docs/hints/h11.md
+++ b/docs/hints/h11.md
@@ -1,7 +1,7 @@
 # Kent Tinseltooth - "Smart Braces"
 ![Kent Tinseltooth](../img/hints/h11/kent_tinseltooth.png){: .elf_avatar}
 
-Provides a hint for [Open the Sleigh Shop Door](../../challenges/c11/).
+Hint for: [Open the Sleigh Shop Door](../../challenges/c11/).
 
 ## Request
 > OK, this is starting to freak me out!  
@@ -41,7 +41,7 @@ sudo iptables -A INPUT -i lo -j ACCEPT
 ```
 
 # Answer
-See [solution](#solution)
+See [solution](#solution).
 
 ## Hint
 > Oh thank you! It's so nice to be back in my own head again. Er, alone.  
