--- a/docs/hints/h7.md
+++ b/docs/hints/h7.md
@@ -1,7 +1,7 @@
 # Minty Candycane - "Holiday Hack Trail"
 ![Minty Candycane](../img/hints/h7/minty_candycane.png){: .elf_avatar}
 
-Provides a hint for [Get Access to the Steam Tunnels](../../challenges/c7/).
+Hint for: [Get Access to the Steam Tunnels](../../challenges/c7/).
 
 ## Request
 > Hi! I'm Minty Candycane!  
