--- a/docs/hints/h8.md
+++ b/docs/hints/h8.md
@@ -1,7 +1,7 @@
 # Alabaster Snowball - "Nyanshell"
 ![Alabaster Snowball](../img/hints/h8/alabaster_snowball.png){: .elf_avatar}
 
-Provides a hint for [Bypassing the Frido Sleigh CAPTEHA](../../challenges/c8/).
+Hint for: [Bypassing the Frido Sleigh CAPTEHA](../../challenges/c8/).
 
 ## Request
 > Welcome to the Speaker UNpreparedness Room!  
