--- a/docs/hints/h11.md
+++ b/docs/hints/h11.md
@@ -16,6 +16,8 @@ Hint for: [Open the Sleigh Shop Door](../../challenges/c11/).
 - [How to configure iptables on CentOS](https://upcloud.com/community/tutorials/configure-iptables-centos/)
 
 ## Solution
+![Terminal](../img/hints/h11/h11_terminal1_nopass.png)
+
 1. Read the conversation about [Sleigh Route Finder API](https://srf.elfu.org)
 2. `cat /home/elfuuser/IOTteethBraces.md`
    A proper configuration for the Smart Braces should be exactly:
@@ -40,7 +42,7 @@ sudo iptables -A OUTPUT -p tcp --dport 80 -j ACCEPT
 sudo iptables -A INPUT -i lo -j ACCEPT
 ```
 
-# Answer
+## Answer
 See [solution](#solution).
 
 ## Hint
