--- a/docs/hints/h11.md
+++ b/docs/hints/h11.md
@@ -16,20 +16,24 @@ Hint for: [Open the Sleigh Shop Door](../../challenges/c11/).
 - [How to configure iptables on CentOS](https://upcloud.com/community/tutorials/configure-iptables-centos/)
 
 ## Solution
-![Terminal](../img/hints/h11/h11_terminal1_nopass.png)
+The challenge starts off with a conversation between Kent and a mysterious voice his head. It doesn't provide any real tips or hints except maybe for a little bit of context and a mention of the `srf.elfu.org` domain which we'll be using in [challenge 12](../../challenges/c11/).
 
-1. Read the conversation about [Sleigh Route Finder API](https://srf.elfu.org)
-2. `cat /home/elfuuser/IOTteethBraces.md`
-   A proper configuration for the Smart Braces should be exactly:
-   1. Set the default policies to DROP for the INPUT, FORWARD, and OUTPUT chains.
-   2. Create a rule to ACCEPT all connections that are ESTABLISHED,RELATED on the INPUT and the OUTPUT chains.
-   3. Create a rule to ACCEPT only remote source IP address 172.19.0.225 to access the local SSH server (on port 22).
-   4. Create a rule to ACCEPT any source IP to the local TCP services on ports 21 and 80.
-   5. Create a rule to ACCEPT all OUTPUT traffic with a destination TCP port of 80.
-   6. Create a rule applied to the INPUT chain to ACCEPT all traffic from the lo interface.
-3. Create the following rules (screenshot1.png):
+![Conversation](../img/hints/h11/h11_terminal1_nopass.png)
 
-```text
+`/home/elfuuser/IOTteethBraces.md` contains the firewall configuration for the Smart Braces:
+
+1. Set the default policies to DROP for the INPUT, FORWARD, and OUTPUT chains.
+2. Create a rule to ACCEPT all connections that are ESTABLISHED,RELATED on the INPUT and the OUTPUT chains.
+3. Create a rule to ACCEPT only remote source IP address 172.19.0.225 to access the local SSH server (on port 22).
+4. Create a rule to ACCEPT any source IP to the local TCP services on ports 21 and 80.
+5. Create a rule to ACCEPT all OUTPUT traffic with a destination TCP port of 80.
+6. Create a rule applied to the INPUT chain to ACCEPT all traffic from the lo interface.
+
+![Iptables Configuration](../img/hints/h11/h11_terminal2.png)
+
+Set up the following iptables rules to match the required configuration:
+
+```shell
 sudo iptables -P INPUT DROP
 sudo iptables -P FORWARD DROP
 sudo iptables -P OUTPUT DROP
@@ -41,6 +45,10 @@ sudo iptables -A INPUT -p tcp --dport 80 -j ACCEPT
 sudo iptables -A OUTPUT -p tcp --dport 80 -j ACCEPT
 sudo iptables -A INPUT -i lo -j ACCEPT
 ```
+
+![Configuration Successful](../img/hints/h11/h11_terminal3.png)
+
+That's it! Firewall rules applied and inner peace for Kent achieved!
 
 ## Answer
 See [solution](#solution).
