--- a/docs/hints/h12.md
+++ b/docs/hints/h12.md
@@ -15,7 +15,15 @@ Hint for: [Filter Out Poisoned Sources of Weather Data](../../challenges/c12/).
 - [Parsing Zeek JSON Logs with JQ](https://pen-testing.sans.org/blog/2019/12/03/parsing-zeek-json-logs-with-jq-2)
 
 ## Solution
-1. `cat conn.log | jq -s 'sort_by(.duration) | reverse | .[0]'`
+Start by displaying a single log entry and its properties using `cat conn.log | jq -s '.[0]'`.
+
+![Show Log Format](../img/hints/h12/h12_terminal1.png)
+
+Looks like the `duration` field contains the information we need. Execute `cat conn.log | jq -s 'sort_by(.duration) | reverse | .[0]'` to reverse sort by `duration` and show the log entry matching the longest connection time.
+
+![Longest Connection](../img/hints/h12/h12_terminal2.png)
+
+The destination IP address with the longest connection duration is `13.107.21.200`.
 
 ## Answer
 IP address: `13.107.21.200`
