--- a/docs/hints/h6.md
+++ b/docs/hints/h6.md
@@ -57,7 +57,7 @@ if __name__ == "__main__":
 
 The script generates a manageable list of 5 possible candidates.
 
-```text
+```shell
 1373 is a prime number
 1733 is a prime number
 3137 is a prime number
