--- a/docs/hints/h9.md
+++ b/docs/hints/h9.md
@@ -28,7 +28,7 @@ First select the 'All messages' stream and change the search time frame from 'Se
 
 To answer the first question search for file creation events (i.e. [Sysmon event ID 2](https://www.ultimatewindowssecurity.com/securitylog/encyclopedia/event.aspx?eventid=90002)) from processes named `firefox.exe` but filter out some of the noise by excluding filenames ending in .temp. For regular expressions use `/regex pattern/`. The sidebar to the left can be used to only show relevant fields in the search results.
 
-```text
+```shell
 EventID:2 AND ProcessImage:/.*firefox.exe/ AND NOT TargetFilename:/.*temp/
 ```
 
@@ -41,7 +41,7 @@ EventID:2 AND ProcessImage:/.*firefox.exe/ AND NOT TargetFilename:/.*temp/
 
 To find network activity for a particular process, search for the process name or full process path together with [Sysmon event ID 3](https://www.ultimatewindowssecurity.com/securitylog/encyclopedia/event.aspx?eventid=90003). As the `TargetFileName` field isn't relevant for network events, replace it with `DestinationHostname` and `DestinationIp` instead. Also, be sure to escape special characters like `:` and `\`. 
 
-```text
+```shell
 EventID:3 AND ProcessImage:C\:\\Users\\minty\\Downloads\\cookie_recipe.exe
 ```
 
@@ -54,7 +54,7 @@ EventID:3 AND ProcessImage:C\:\\Users\\minty\\Downloads\\cookie_recipe.exe
 
 Interesting! `4444` looks like a port typically used by a Metasploit [Meterpreter](https://www.offensive-security.com/metasploit-unleashed/meterpreter-basics/) reverse shell. Anything the attacker executes from that remote shell will most likely show up as spawning from the reverse shell binary. Let's search for process creation events (i.e. [Sysmon event ID 1](https://www.ultimatewindowssecurity.com/securitylog/encyclopedia/event.aspx?eventid=90001)) which have `cookie_recipe.exe` as the parent. Be sure to sort the results by timestamp.
 
-```text
+```shell
 EventID:1 AND ParentProcessImage:C\:\\Users\\minty\\Downloads\\cookie_recipe.exe
 ```
 
@@ -67,7 +67,7 @@ EventID:1 AND ParentProcessImage:C\:\\Users\\minty\\Downloads\\cookie_recipe.exe
 
 The previous query will provides the correct answer when you scroll down far enough. Adding a search term that narrows the results  to commands that perform service related actions helps get rid of some of the noise though. [Controlling a Windows service](https://docs.microsoft.com/en-us/windows/win32/services/controlling-a-service-using-sc) is done using the `sc` command, so let's add that as an additional search term. Looks like our attacker exploited the [WebExec vulnerability](https://webexec.org).
 
-```text
+```shell
 EventID:1 AND ParentProcessImage:C\:\\Users\\minty\\Downloads\\cookie_recipe.exe AND CommandLine/.*sc.*/
 ```
 
@@ -80,7 +80,7 @@ EventID:1 AND ParentProcessImage:C\:\\Users\\minty\\Downloads\\cookie_recipe.exe
 
 Based on the information from the previous search we now know that the attacker escalated privileges to the `cookie_recipe2.exe` binary. Just like before we search for [Sysmon event ID 1](https://www.ultimatewindowssecurity.com/securitylog/encyclopedia/event.aspx?eventid=90001) with `cookie_recipe2.exe` as the parent. Our attacker downloaded `mimikatz.exe` as `cookie.exe` and then dumped credentials using `C:\cookie.exe "privilege::debug" "sekurlsa::logonpasswords" exit "`
 
-```text
+```shell
 EventID:1 AND ParentProcessImage:C\:\\Users\\minty\\Downloads\\cookie_recipe2.exe
 ```
 
@@ -93,7 +93,7 @@ EventID:1 AND ParentProcessImage:C\:\\Users\\minty\\Downloads\\cookie_recipe2.ex
 
 Back to network events we go and more specifically logon events originating from the attacker machine. We know the reverse shell connection went back to IP `192.168.247.175`. If we combine this information with [Windows event ID 4624](https://www.ultimatewindowssecurity.com/securitylog/encyclopedia/event.aspx?eventid=4624), which tracks successful login activity, and exclude Minty's workstation we should be able to find the other host and the account name used to log in there.
 
-```text
+```shell
 EventID:4624 AND SourceNetworkAddress:192.168.247.175 AND NOT DestinationHostname:elfu-res-wks1
 ```
 
@@ -106,7 +106,7 @@ EventID:4624 AND SourceNetworkAddress:192.168.247.175 AND NOT DestinationHostnam
 
 [Windows event ID 4624](https://www.ultimatewindowssecurity.com/securitylog/encyclopedia/event.aspx?eventid=4624) tracks a number of different logon types like local interactive (i.e. logon type 2) and connections to shared folders across the network (i.e. logon type 3). It also tracks remote interactive login activity like Remote Desktop via [logon type 10](https://www.ultimatewindowssecurity.com/securitylog/encyclopedia/event.aspx?eventid=4624). 
 
-```text
+```shell
 EventID:4624 AND LogonType:10
 ```
 
@@ -119,7 +119,7 @@ EventID:4624 AND LogonType:10
 
 At this point we can start limiting our searches to activity that happened since the previously found events. We're still searching for logon activity using [Windows event ID 4624](https://www.ultimatewindowssecurity.com/securitylog/encyclopedia/event.aspx?eventid=4624) but this time we're looking for connections to shared folders or [logon type 3](https://www.ultimatewindowssecurity.com/securitylog/encyclopedia/event.aspx?eventid=4624). 
 
-```text
+```shell
 timestamp:["2019-11-19 06:04:28.000" TO *] AND EventID:4624 AND LogonType:3
 ```
 
@@ -132,7 +132,7 @@ timestamp:["2019-11-19 06:04:28.000" TO *] AND EventID:4624 AND LogonType:3
 
 Just like the Firefox download from question 1, copying a file means writing it to disk and thus generating a file creation time event (i.e. [Sysmon event ID 2](https://www.ultimatewindowssecurity.com/securitylog/encyclopedia/event.aspx?eventid=90002)). Add the source name for the second host, limit the results to activity that happened since the Remote Desktop login, and filter out any file names ending in .temp or .xml to find the research document.
 
-```text
+```shell
 EventID:2 AND source:elfu-res-wks2 AND timestamp:["2019-11-19 06:04:28.000" TO *] AND NOT TargetFilename:/.*(.temp|.xml)/
 ```
 
@@ -145,7 +145,7 @@ EventID:2 AND source:elfu-res-wks2 AND timestamp:["2019-11-19 06:04:28.000" TO *
 
 First we need to understand how the data was exfiltrated (i.e. what commands were used) before we can answer the question where it was exfiltrated to. Begin by searching for just filename of the exfiltrated document, `super_secret_elfu_research.pdf`.
 
-```text
+```shell
 super_secret_elfu_research.pdf
 ```
 
@@ -153,7 +153,7 @@ super_secret_elfu_research.pdf
 
 It appears our attacker used PowerShell to upload the file to Pastebin. Now that we know how the data was exfiltrated we can search for [Sysmon event ID 3](https://www.ultimatewindowssecurity.com/securitylog/encyclopedia/event.aspx?eventid=90003) (i.e. a network connection) and the `pastebin.com` domain to retrieve the associated destination IP address.
 
-```text
+```shell
 EventID:3 AND DestinationHostname:pastebin.com
 ```
 
