--- a/docs/challenges/c1.md
+++ b/docs/challenges/c1.md
@@ -1,7 +1,7 @@
 # Talk to Santa & Find the Turtle Doves
-![Santa](../img/challenges/c1/screenshot1.jpg)
+![Santa](../img/challenges/c1/c1_1.jpg)
 
-Hint from: no hints available.
+Hint: no hints available.
 
 ## Request
 > This is a little embarrassing, but I need your help.  
@@ -16,10 +16,10 @@ Hint from: no hints available.
 > If you help my elves with some quicker problems, they'll probably remember clues for the objectives.  
 
 ## Resources
-None
+- None
 
 ## Solution
-![Michael and Jane](../img/challenges/c1/screenshot2.png)
+![Michael and Jane](../img/challenges/c1/c1_2.png)
 
 This objective, together with *Talk to Santa in the Quad*, doesn't require any answers to be submitted as it's there to set the stage, point you in the right direction, and ensure you visit all areas of Elf University. To complete objective 0 and to learn more about the missing doves talk to Santa in the Quad. Once you've located the doves near the Student Union fireplace and complete objectives 2-5 objective 1 will be marked as completed and Santa will continue the conversation as indicated in the [response section](#response) below.
 
