Update hint links

--- a/docs/hints/h11.md
+++ b/docs/hints/h11.md
@@ -1,7 +1,7 @@
 # Kent Tinseltooth - "Smart Braces"
 ![Kent Tinseltooth](../img/hints/h11/kent_tinseltooth.png){: .elf_avatar}
 
-Hint for: [Open the Sleigh Shop Door](../../challenges/c11/).
+Hint for: [Open the Sleigh Shop Door](../../challenges/c11/)
 
 ## Request
 > OK, this is starting to freak me out!  
