--- a/docs/hints/h5.md
+++ b/docs/hints/h5.md
@@ -1,7 +1,7 @@
 # Sparkle Redberry - "Xmas Cheer Laser"
 ![Sparkle Redberry](../img/hints/h5/sparkle_redberry.png){: .elf_avatar}
 
-Hint for: [Network Log Analysis - Determine Compromised System](../../challenges/c5/).
+Hint for: [Network Log Analysis - Determine Compromised System](../../challenges/c5/)
 
 ## Request
 > I'm Sparkle Redberry and Imma chargin' my laser!  
