--- a/docs/hints/h6.md
+++ b/docs/hints/h6.md
@@ -1,7 +1,7 @@
 # Tangle Coalbox - "Frosty Keypad"
 ![Tangle Coalbox](../img/hints/h6/tangle_coalbox.png){: .elf_avatar}
 
-Hint for: [Splunk](../../challenges/c6/).
+Hint for: [Splunk](../../challenges/c6/)
 
 ## Request
 > Hey kid, it's me, Tangle Coalbox.  
