--- a/docs/hints/h9.md
+++ b/docs/hints/h9.md
@@ -1,7 +1,7 @@
 # Pepper Minstix - "Graylog"
 ![Pepper Minstix](../img/hints/h9/pepper_minstix.png){: .elf_avatar}
 
-Hint for: [Retrieve the Scraps of Paper from Server](../../challenges/c9/).
+Hint for: [Retrieve the Scraps of Paper from Server](../../challenges/c9/)
 
 ## Request
 > It's me - Pepper Minstix.  
