--- a/docs/challenges/c3.md
+++ b/docs/challenges/c3.md
@@ -1,11 +1,12 @@
 # Windows Log Analysis - Evaluate Attack Outcome
+Hint: [Bushy Evergreen - "Escape Ed"](../hints/h3.md)
 
 ## Question
 *"We're seeing attacks against the Elf U domain! Using the [event log data](https://downloads.elfu.org/Security.evtx.zip), identify the user account that the attacker compromised using a password spray attack. Bushy Evergreen is hanging out in the train station and may be able to help you out."*
 
 ## Resources
 - [Event log data](https://downloads.elfu.org/Security.evtx.zip)
-- [DeepBlueCLI](https://github.com/sans-blue-team/DeepBlueCLI)
+- [DeepBlueCLI Github](https://github.com/sans-blue-team/DeepBlueCLI)
 - [DeepBlueCLI: a PowerShell Module for Hunt Teaming via Windows Event Logs](https://www.ericconrad.com/2016/09/deepbluecli-powershell-module-for-hunt.html)
 
 ## Solution
