--- a/docs/challenges/c1.md
+++ b/docs/challenges/c1.md
@@ -1,14 +1,13 @@
 # Talk to Santa & Find the Turtle Doves
 Hint: no hints
 
-![Santa](../img/challenges/c1/c1_1.jpg)
-
 ## Request
 > This is a little embarrassing, but I need your help.  
 > Our KringleCon turtle dove mascots are missing!  
 > They probably just wandered off.  
 > Can you please help find them?  
-> To help you search for them and get acquainted with KringleCon, I’ve created some objectives for you. You can see them in your badge.  
+> To help you search for them and get acquainted with KringleCon, I’ve created some objectives for you.  
+> You can see them in your badge.  
 > Where's your badge? Oh! It's that big, circle emblem on your chest - give it a tap!  
 > We made them in two flavors - one for our new guests, and one for those who've attended both KringleCons.  
 > After you find the Turtle Doves and complete objectives 2-5, please come back and let me know.  
@@ -19,7 +18,7 @@ Hint: no hints
 - None
 
 ## Solution
-![Michael and Jane](../img/challenges/c1/c1_2.png)
+![Michael and Jane](../img/challenges/c1/c1_1.png)
 
 This objective, together with *Talk to Santa in the Quad*, doesn't require any answers to be submitted as it's meant to set the stage, point you in the right direction, and ensure you visit all areas of Elf University. To complete objective 0 and to learn more about the missing doves talk to Santa in the Quad. Once you've located the doves near the Student Union fireplace and complete objectives 2-5 objective 1 will be marked as completed and Santa will continue the conversation as indicated in the [response section](#response) below.
 
