--- a/docs/challenges/c2.md
+++ b/docs/challenges/c2.md
@@ -2,7 +2,9 @@
 Hint: no hints
 
 ## Request
-*"Someone sent a [threatening letter](https://downloads.elfu.org/LetterToElfUPersonnel.pdf) to Elf University. What is the first word in ALL CAPS in the subject line of the letter? Please find the letter in the Quad."*
+> Someone sent a [threatening letter](https://downloads.elfu.org/LetterToElfUPersonnel.pdf) to Elf University.  
+> What is the first word in ALL CAPS in the subject line of the letter?  
+> Please find the letter in the Quad.  
 
 ## Resources
 - [Threatening letter](https://downloads.elfu.org/LetterToElfUPersonnel.pdf)
