--- a/docs/challenges/c3.md
+++ b/docs/challenges/c3.md
@@ -2,7 +2,9 @@
 Hint: [Bushy Evergreen - "Escape Ed"](../hints/h3.md)
 
 ## Question
-*"We're seeing attacks against the Elf U domain! Using the [event log data](https://downloads.elfu.org/Security.evtx.zip), identify the user account that the attacker compromised using a password spray attack. Bushy Evergreen is hanging out in the train station and may be able to help you out."*
+> We're seeing attacks against the Elf U domain!  
+> Using the [event log data](https://downloads.elfu.org/Security.evtx.zip), identify the user account that the attacker compromised using a password spray attack.  
+> Bushy Evergreen is hanging out in the train station and may be able to help you out.
 
 ## Resources
 - [Event log data](https://downloads.elfu.org/Security.evtx.zip)
